--- a/style.css
+++ b/style.css
@@ -103,59 +103,6 @@ body {
     }
 }
 
-/* .searchbar {
-    font-size: 1em;
-    width: 20rem;
-    padding: 5px 1px 5px 7px;
-    float: left;
-    border-radius: 10px 0px 0px 10px;
-    border: none;
-    outline: none;
-}
-
-.searchbar::-webkit-search-cancel-button {
-    -webkit-appearance: none;
-    appearance: none;
-    height: 24px;
-    width: 24px;
-    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'/></svg>");
-    opacity: 70%;
-    cursor: pointer;
-}
-
-.searchbar::-webkit-search-cancel-button:hover{
-    opacity: 1;
-}
-
-.search-query button {
-    background-color: var(--highlight-300);
-    font-size: 1em;
-    padding: 5px 9px 5px 7px;
-    border: none;
-    border-radius: 0 10px 10px 0;
-    cursor: pointer;
-}
-
-.search-query::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-.shopping-toggle {
-    background-color: var(--clr-300);
-    width: 40px;
-    height: 40px;
-    font-size: 1.2rem;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-}
-
-.shopping-toggle:active{
-    background-color: var(--clr-500);
-} */
-
 .main-wrapper {
     width: 100%;
     height: max-content;
@@ -163,6 +110,14 @@ body {
     display: grid;
     grid-template-columns: 1fr auto;
     gap: 1em;
+}
+
+@media screen and (max-width: 600px) {
+    .main-wrapper {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
 }
 
 .product__container {
